Add unique value renderer for categorizing public works by type

--- a/samples/02-publicBuildVix/publicBuildVix.html
+++ b/samples/02-publicBuildVix/publicBuildVix.html
@@ -20,7 +20,7 @@
       </p>
       <p>
         <strong>Technologies:</strong> ArcGIS JavaScript API, HTML, CSS,
-        FeatureLayer, MapView.
+        FeatureLayer, MapView, Renderer.
       </p>
 
     </div>
