Add 3D globe visualization and back button to Airflow Globe project

--- a/index.html
+++ b/index.html
@@ -75,6 +75,17 @@
               Interactive map showcasing ongoing and completed public infrastructure projects across Vitória
             </p>
           </div>
+
+          <div class="bg-white p-5 rounded-xl shadow hover:shadow-lg transition">
+            <h4 class="text-xl font-semibold mb-2 text-blue-800">
+              <a href="/samples/03-worldAircraftWebScene/worldAircraftWebScene.html" class="hover:underline">
+                Scene View - Airflow Globe
+              </a>
+            </h4>
+            <p class="text-gray-700 text-sm">
+              Interactive 3D globe visualization showcasing air traffic data and flight paths.
+            </p>
+          </div>
         </div>
       </div>
     </section>
