Fix back button links to use relative paths in HTML files

--- a/samples/01-publicWorkVix/publicWorkVix.html
+++ b/samples/01-publicWorkVix/publicWorkVix.html
@@ -34,7 +34,7 @@
       <button id="removeLayer">Remove Layer</button>
     </div>
 
-    <a href="/index.html" id="backButton">← Back</a>
+    <a href="index.html" id="backButton">← Back</a>
 
     <div id="viewDiv"></div>
 
