--- a/samples/03-worldAircraftWebScene/worldAircraftWebScene.html
+++ b/samples/03-worldAircraftWebScene/worldAircraftWebScene.html
@@ -23,7 +23,7 @@
      <link href="worldAircraftWebScene.css" rel="stylesheet" />
   </head>
   <body>
-     <a href="/index.html" id="backButton">← Back</a>
+     <a href="index.html" id="backButton">← Back</a>
 
   <div id="infoCard">
     <h2>About This Project</h2>
