--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cleison – Full-Stack & GIS Developer</title>
+    <title>Cleison - Full-Stack & GIS Developer</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
@@ -56,7 +56,7 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
           <div class="bg-white p-5 rounded-xl shadow hover:shadow-lg transition">
             <h4 class="text-xl font-semibold mb-2 text-blue-800">
-              <a href="/samples/01-publicWorkVix/publicWorkVix.html" class="hover:underline">
+              <a href="samples/01-publicWorkVix/publicWorkVix.html" class="hover:underline">
                 Interactive GIS Viewer - Vitória City Open Data
               </a>
             </h4>
@@ -67,7 +67,7 @@
 
           <div class="bg-white p-5 rounded-xl shadow hover:shadow-lg transition">
             <h4 class="text-xl font-semibold mb-2 text-blue-800">
-              <a href="/samples/02-publicBuildVix/publicBuildVix.html" class="hover:underline">
+              <a href="samples/02-publicBuildVix/publicBuildVix.html" class="hover:underline">
                 Public Works Map - Vitória City Open Data
               </a>
             </h4>
@@ -78,7 +78,7 @@
 
           <div class="bg-white p-5 rounded-xl shadow hover:shadow-lg transition">
             <h4 class="text-xl font-semibold mb-2 text-blue-800">
-              <a href="/samples/03-worldAircraftWebScene/worldAircraftWebScene.html" class="hover:underline">
+              <a href="samples/03-worldAircraftWebScene/worldAircraftWebScene.html" class="hover:underline">
                 Scene View - Airflow Globe
               </a>
             </h4>
