Update project sample links to use relative paths in index.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
           <div class="bg-white p-5 rounded-xl shadow hover:shadow-lg transition">
             <h4 class="text-xl font-semibold mb-2 text-blue-800">
-              <a href="../samples/01-publicWorkVix/publicWorkVix.html" class="hover:underline">
+              <a href="samples/01-publicWorkVix/publicWorkVix.html" class="hover:underline">
                 Interactive GIS Viewer - Vitória City Open Data
               </a>
             </h4>
@@ -67,7 +67,7 @@
 
           <div class="bg-white p-5 rounded-xl shadow hover:shadow-lg transition">
             <h4 class="text-xl font-semibold mb-2 text-blue-800">
-              <a href="../samples/02-publicBuildVix/publicBuildVix.html" class="hover:underline">
+              <a href="samples/02-publicBuildVix/publicBuildVix.html" class="hover:underline">
                 Public Works Map - Vitória City Open Data
               </a>
             </h4>
@@ -78,7 +78,7 @@
 
           <div class="bg-white p-5 rounded-xl shadow hover:shadow-lg transition">
             <h4 class="text-xl font-semibold mb-2 text-blue-800">
-              <a href="../samples/03-worldAircraftWebScene/worldAircraftWebScene.html" class="hover:underline">
+              <a href="samples/03-worldAircraftWebScene/worldAircraftWebScene.html" class="hover:underline">
                 Scene View - Airflow Globe
               </a>
             </h4>
