Update back button links to use relative paths and add new Sao Paulo Web Scene files

--- a/samples/02-publicBuildVix/publicBuildVix.html
+++ b/samples/02-publicBuildVix/publicBuildVix.html
@@ -37,7 +37,7 @@
       <div id="basemapType"></div>
     </div>
 
-    <a href="index.html" id="backButton">← Back</a>
+    <a href="../index.html" id="backButton">← Back</a>
 
     <div id="viewDiv"></div>
 
