--- a/samples/03-saoPauloWebScene/saoPauloWebScene.html
+++ b/samples/03-saoPauloWebScene/saoPauloWebScene.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="utf-8" />
   <meta name = "viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />   
-            <title>Airflow Globe</title> 
+            <title>São Paulo Web Scene</title> 
            <style>
         html,
         body {
@@ -36,7 +36,7 @@
         <p><strong>Technologies:</strong> ArcGIS Maps SDK for JavaScript (SceneView & WebScene),  HTML, CSS, Esri Widgets (Zoom), 3D Lighting & Camera Positioning.</p>
  </div>
 
-      <arcgis-scene item-id="128ba9498cca447ab6ec356b84fee879" basemap="arcgis/topographic">
+      <arcgis-scene item-id="9b5e0df2c4d94acc8e0bebca1bc79baa" basemap="arcgis/topographic">
          <arcgis-zoom position="top-left"></arcgis-zoom>
       </arcgis-scene>
       <script type="module" src="worldAircraftWebScene.js"></script>
