Update São Paulo Web Scene details and fix back button link in HTML files

--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
 
           <div class="bg-white p-5 rounded-xl shadow hover:shadow-lg transition">
             <h4 class="text-xl font-semibold mb-2 text-blue-800">
-              <a href="samples/03-worldAircraftWebScene/worldAircraftWebScene.html" class="hover:underline">
-                Scene View - Airflow Globe
+              <a href="samples/03-saoPauloWebScene/saoPauloWebScene.html" class="hover:underline">
+                Scene View - São Paulo
               </a>
             </h4>
             <p class="text-gray-700 text-sm">
-              Interactive 3D globe visualization showcasing air traffic data and flight paths.
+              Interactive 3D local visualization São Paulo.
             </p>
           </div>
         </div>
