--- a/samples/03-saoPauloWebScene/saoPauloWebScene.html
+++ b/samples/03-saoPauloWebScene/saoPauloWebScene.html
@@ -23,15 +23,15 @@
      <link href="worldAircraftWebScene.css" rel="stylesheet" />
   </head>
   <body>
-     <a href="index.html" id="backButton">← Back</a>
+     <a href="../index.html" id="backButton">← Back</a>
 
   <div id="infoCard">
     <h2>About This Project</h2>
         <p>
-        This project presents a 3D interactive globe using Esri’s WebScene technology to showcase geographic data in a dynamic and immersive way. The scene is centered around Vitória, Brazil, and uses lighting effects to simulate realistic shadows and daylight conditions.
+        This project presents a 3D interactive web map using Esri’s WebScene technology to showcase geographic data in a dynamic and immersive way. The scene is centered around São Paulo, Brazil, and uses lighting effects to simulate realistic shadows and daylight conditions.
         </p>
         <p>
-        Explore the visualization by zooming, panning, and rotating the globe to analyze spatial relationships and landscape perspectives in a real-world 3D context.
+        Explore the visualization by zooming, panning, and rotating the camera. Use the zoom widget to analyze spatial relationships and landscape perspectives in a real-world 3D context.
         </p>
         <p><strong>Technologies:</strong> ArcGIS Maps SDK for JavaScript (SceneView & WebScene),  HTML, CSS, Esri Widgets (Zoom), 3D Lighting & Camera Positioning.</p>
  </div>
