Update back button link to use relative path and format code for readability

--- a/samples/01-publicWorkVix/publicWorkVix.html
+++ b/samples/01-publicWorkVix/publicWorkVix.html
@@ -13,16 +13,19 @@
     <link href="publicWorkVix.css" rel="stylesheet" />
   </head>
   <body>
-
     <div id="infoCard">
       <h2>About This Project</h2>
       <p>
-        Explore interactive GIS layers from Vitória's public datasets. Select a layer to visualize detailed information about public infrastructure, urban projects, and services. Easily add or remove layers and use the legend to understand map symbols.
+        Explore interactive GIS layers from Vitória's public datasets. Select a
+        layer to visualize detailed information about public infrastructure,
+        urban projects, and services. Easily add or remove layers and use the
+        legend to understand map symbols.
       </p>
       <p>
-        <strong>Technologies:</strong> ArcGIS JavaScript API, HTML, CSS, Esri Feature Layers & Widgets (Legend, MapView), REST API requests with EsriRequest.
+        <strong>Technologies:</strong> ArcGIS JavaScript API, HTML, CSS, Esri
+        Feature Layers & Widgets (Legend, MapView), REST API requests with
+        EsriRequest.
       </p>
-
     </div>
 
     <div id="controls">
@@ -34,7 +37,7 @@
       <button id="removeLayer">Remove Layer</button>
     </div>
 
-    <a href="index.html" id="backButton">← Back</a>
+    <a href="../index.html" id="backButton">← Back</a>
 
     <div id="viewDiv"></div>
 
