Update saoPauloWebScene.html to correct stylesheet and script links

--- a/samples/03-saoPauloWebScene/saoPauloWebScene.html
+++ b/samples/03-saoPauloWebScene/saoPauloWebScene.html
@@ -20,10 +20,10 @@
        type="module"
        src="https://js.arcgis.com/map-components/4.31/arcgis-map-components.esm.js"
      ></script>
-     <link href="worldAircraftWebScene.css" rel="stylesheet" />
+     <link href="saoPauloWebScene.css" rel="stylesheet" />
   </head>
   <body>
-     <a href="../index.html" id="backButton">← Back</a>
+     <a href="index.html" id="backButton">← Back</a>
 
   <div id="infoCard">
     <h2>About This Project</h2>
@@ -39,7 +39,7 @@
       <arcgis-scene item-id="9b5e0df2c4d94acc8e0bebca1bc79baa" basemap="arcgis/topographic">
          <arcgis-zoom position="top-left"></arcgis-zoom>
       </arcgis-scene>
-      <script type="module" src="worldAircraftWebScene.js"></script>
+      <script type="module" src="saoPauloWebScene.js"></script>
 
   </body>
 </html>
