--- a/samples/02-publicBuildVix/publicBuildVix.html
+++ b/samples/02-publicBuildVix/publicBuildVix.html
@@ -37,7 +37,8 @@
       <div id="basemapType"></div>
     </div>
 
-    <a href="../index.html" id="backButton">← Back</a>
+    <a href="/cleisontech/index.html">← Back</a>
+
 
     <div id="viewDiv"></div>
 
